manifests/apps/media/karakeep/deploy-targets/talos/karakeep/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep-web
spec:
  selector:
    app: karakeep-web
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
